--- a/ISFInvoiceApplication.Web/Web.config
+++ b/ISFInvoiceApplication.Web/Web.config
@@ -9,7 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-ISFInvoiceApplication.Web-20160223110812;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-ISFInvoiceApplication.Web-20160223110812.mdf" />
+    <add name="InvoiceApplicationEntities" connectionString="metadata=res://*/Data.InvoiceApplication.csdl|res://*/Data.InvoiceApplication.ssdl|res://*/Data.InvoiceApplication.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=C:\Users\johnyjeanmichel\Documents\Visual Studio 2013\Projects\ISFInvoiceApplication\ISFInvoiceApplication.Infrastructure\InvoiceApplication.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
